'Refactor And README' 	new file:   .idea/modules.xml 	new file:   .idea/testproj.iml 	new file:   .idea/vcs.xml 	new file:   .idea/workspace.xml 	modified:   apidoc.json 	new file:   doc/api_data.js 	new file:   doc/api_data.json 	new file:   doc/api_project.js 	new file:   doc/api_project.json 	new file:   doc/css/style.css 	new file:   doc/fonts/glyphicons-halflings-regular.eot 	new file:   doc/fonts/glyphicons-halflings-regular.svg 	new file:   doc/fonts/glyphicons-halflings-regular.ttf 	new file:   doc/fonts/glyphicons-halflings-regular.woff 	new file:   doc/fonts/glyphicons-halflings-regular.woff2 	new file:   doc/img/favicon.ico 	new file:   doc/index.html 	new file:   doc/locales/ca.js 	new file:   doc/locales/cs.js 	new file:   doc/locales/de.js 	new file:   doc/locales/es.js 	new file:   doc/locales/fr.js 	new file:   doc/locales/it.js 	new file:   doc/locales/locale.js 	new file:   doc/locales/nl.js 	new file:   doc/locales/pl.js 	new file:   doc/locales/pt_br.js 	new file:   doc/locales/ro.js 	new file:   doc/locales/ru.js 	new file:   doc/locales/tr.js 	new file:   doc/locales/vi.js 	new file:   doc/locales/zh.js 	new file:   doc/locales/zh_cn.js 	new file:   doc/main.js 	new file:   doc/utils/handlebars_helper.js 	new file:   doc/utils/send_sample_request.js 	new file:   doc/utils/send_sample_request_utils.js 	new file:   doc/vendor/bootstrap.min.css 	new file:   doc/vendor/bootstrap.min.js 	new file:   doc/vendor/diff_match_patch.min.js 	new file:   doc/vendor/handlebars.min.js 	new file:   doc/vendor/jquery.min.js 	new file:   doc/vendor/list.min.js 	new file:   doc/vendor/lodash.custom.min.js 	new file:   doc/vendor/path-to-regexp/LICENSE 	new file:   doc/vendor/path-to-regexp/index.js 	new file:   doc/vendor/polyfill.js 	new file:   doc/vendor/prism.css 	new file:   doc/vendor/prism.js 	new file:   doc/vendor/require.min.js 	new file:   doc/vendor/semver.min.js 	new file:   doc/vendor/webfontloader.js 	modified:   package-lock.json 	modified:   pack

--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
   "description": "apiDoc basic example",
   "title": "Custom apiDoc browser title",
   "url": "https://api.github.com/v1",
-  "devDependencies": {}
+  "devDependencies": {},
+  "dependencies": {
+    "ajv": "^6.12.5",
+    "axios": "^0.20.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-json": "^1.2.0",
+    "xml2js": "^0.4.23"
+  }
 }
